<resources>
    <string name="app_name">Inventory App</string>
    <string name="the_inventory_is_empty">The inventory is empty…</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_email">Supplier E-mail Address</string>
    <string name="image">Image</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="title_new_item">Add new item</string>
    <string name="title_edit_item">Edit item</string>
    <string name="dialog_message">There are unsaved data in item details. Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_item">Save item</string>
    <string name="order_item">Order item</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="place_order_message">You can place this order by phone and e-mail</string>
    <string name="phone">Phone</string>
    <string name="email">e-mail</string>
    <string name="delete_message">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sale">SALE</string>
</resources>
