<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/price_edit" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/quantity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/decrease_quantity_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_remove_black_24dp" />

            <EditText
                android:id="@+id/quantity_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_black_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/supplier_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/supplier_phone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone" />

        <EditText
            android:id="@+id/supplier_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <TextView
            android:id="@+id/supplier_email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email" />

        <EditText
            android:id="@+id/supplier_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/image_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image" />

        <Button
            android:id="@+id/select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

</ScrollView>
